background estilos, y html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Survey Form</title>
 </head>
 <body>
-    
+    <main class="main-section">
+        <section class="main-info">
+            <h1 id="title">Lualfemo Survey Form</h1>
+            <p id="description">Thank you for taking the time to help me improve my skills</p>   
+        </section>
+        
+        <section class="form-section">
+
+        </section>
+    </main>    
 </body>
 </html>
