estilos al background, h1 y p, y comienzo el form

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <h1 id="title">Lualfemo Survey Form</h1>
             <p id="description">Thank you for taking the time to help me improve my skills</p>   
         </section>
-        
         <section class="form-section">
-
+            <form action="" id="survey-form">
+                
+            </form>
         </section>
-    </main>    
+    </main>
 </body>
 </html>
