empiezo a crear el formulario, quede en number

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         </section>
         <section class="form-section">
             <form action="" id="survey-form">
-                
+                <label for="name" id="name-label">Name</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email" id="email-label">Email</label>
+                <input type="email" name="email" id="email" required>
+                <label for="number" id="number-label">Age (Optional)</label>
+                <input type="number" name="number" id="number" required>
+                <input type="submit" value="submit">
             </form>
         </section>
     </main>
