mas estilos a labels y colores de letra

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
               </div>
                 <!-- feature options -->
               <div class="form-group">
-                <label for="page-feature" id="page-feature">What is your favorite feature about this page?</label>
-                <select name="page-feature" id="page-feature">
+                <label for="page-feature" id="label-pagefeature">What is your favorite feature about this page?</label>
+                <select name="pagefeature" id="page-feature">
                 <option disabled selected value>Select an option</option>
                 <option value="design">Design</option>
                 <option value="colors">Colors</option>
@@ -66,7 +66,7 @@
               </div>
               <!-- Checkbox -->
               <div class="form-group">
-                <p class="checkbox-paragraph">What wpuld ypu like to see improved (Check all that apply)</p>
+                <p class="checkbox-paragraph">What would you like to see improved (Check all that apply)</p>
                 <label for="video">Add Videos</label>
                 <input type="checkbox" name="video" id="video" value="video">
                 <label for="images">Add Images</label>
