--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
             <form action="" id="survey-form" method="post">
                 <div class="form-group">
                   <label for="name" id="name-label">Name</label>
-                  <input type="text" id="name" name="name" required placeholder="Enter your name">
+                  <input type="text" id="name" name="name" class="input-css" required placeholder="Enter your name">
                 </div>
                 <div class="form-group">
                   <label for="email" id="email-label">Email</label>
-                  <input type="email" name="email" id="email" required placeholder="Enter your Email">
+                  <input type="email" name="email" id="email" class="input-css" required placeholder="Enter your Email">
                 </div>
                 <div class="form-group">
                   <label for="number" id="number-label">Age (Optional)</label>
-                  <input type="number" name="number" id="number" min="18" max="80" required placeholder="Age">
+                  <input type="number" name="number" id="number" class="input-css" min="18" max="80" required placeholder="Age">
                 </div>
                 <!-- dropdown list -->
                 <div class="form-group">
                   <label for="dropdown" id="label-role">Which option best describes your current role?</label>
-                  <select name="dropdown" id="dropdown">
+                  <select name="dropdown" id="dropdown" class="input-css">
                     <option disabled selected value>Select current role</option>
                     <option value="student">Student</option>
                     <option value="fullT">Full Time Job</option>
@@ -44,7 +44,7 @@
                   </select>
                 </div>
                 <!-- recommend radio buttons -->
-                <div class="form-group">
+                <div class="form-group form-css">
                   <p class="radio-paragraph">Would you recommend my work to a friend?</p>
                   <input type="radio" name="recommend" id="definitely" value="definitely">
                   <label for="definitely">Definitely</label>
@@ -56,7 +56,7 @@
                 <!-- feature options -->
               <div class="form-group">
                 <label for="page-feature" id="label-pagefeature">What is your favorite feature about this page?</label>
-                <select name="pagefeature" id="page-feature">
+                <select name="pagefeature" id="page-feature" class="input-css">
                 <option disabled selected value>Select an option</option>
                 <option value="design">Design</option>
                 <option value="colors">Colors</option>
@@ -65,7 +65,7 @@
                 </select>
               </div>
               <!-- Checkbox -->
-              <div class="form-group">
+              <div class="form-group form-css">
                 <p class="checkbox-paragraph">What would you like to see improved (Check all that apply)</p>
                 <label for="video">Add Videos</label>
                 <input type="checkbox" name="video" id="video" value="video">
