styles al form, logré cuadrar los radio buttons

--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
                 <!-- recommend radio buttons -->
                 <div class="form-group form-css">
                   <p class="radio-paragraph">Would you recommend my work to a friend?</p>
-                  <input type="radio" name="recommend" id="definitely" value="definitely">
-                  <label for="definitely">Definitely</label>
-                  <input type="radio" name="recommend" id="maybe" value="maybe">
-                  <label for="maybe">Maybe</label>
-                  <input type="radio" name="recommend" id="notsure" value="notsure">
-                  <label for="notsure">Not sure</label>
+                  <label for="definitely">
+                  <input type="radio" name="recommend" id="definitely" value="definitely"class="input-radio"> Definitely
+                  </label>
+                  <label for="maybe">
+                  <input type="radio" name="recommend" id="maybe" value="maybe" class="input-radio">
+                  Maybe</label>
+                  <label for="notsure">
+                  <input type="radio" name="recommend" id="notsure" value="notsure" class="input-radio">
+                  Not sure</label>
               </div>
                 <!-- feature options -->
               <div class="form-group">
