--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
               </div>
                 <!-- feature options -->
               <div class="form-group">
-                <label for="page-feature" id="label-pagefeature">What is your favorite feature about this page?</label>
+                <!-- <label for="page-feature" id="labelpfeature">What is your favorite feature about this page?</label> -->
+                <p id="feature-paragraph">What is your favorite feature about this page?</p>
                 <select name="pagefeature" id="page-feature" class="input-css">
                 <option disabled selected value>Select an option</option>
                 <option value="design">Design</option>
@@ -70,20 +71,20 @@
               <!-- Checkbox -->
               <div class="form-group form-css">
                 <p class="checkbox-paragraph">What would you like to see improved (Check all that apply)</p>
-                <label for="video">Add Videos</label>
-                <input type="checkbox" name="video" id="video" value="video">
-                <label for="images">Add Images</label>
-                <input type="checkbox" name="images" id="images" value="images">
-                <label for="design">Change Design</label>
-                <input type="checkbox" name="design" id="design" value="design">
-                <label for="logo">Add Logos</label>
-                <input type="checkbox" name="logo" id="logo" value="logo">
-                <label for="info">More Information</label>
-                <input type="checkbox" name="info" id="info" value="info">
-                <label for="interactivity">Interactivity</label>
-                <input type="checkbox" name="interactivity" id="interactivity" value="interactivity">
-                <label for="language">Change Language</label>
-                <input type="checkbox" name="language" id="language" value="language">
+                <label for="video">
+                <input type="checkbox" name="video" id="video" value="video">Add Videos</label>
+                <label for="images">
+                <input type="checkbox" name="images" id="images" value="images">Add Images</label>
+                <label for="design">
+                <input type="checkbox" name="design" id="design" value="design">Change Design</label>
+                <label for="logo">
+                <input type="checkbox" name="logo" id="logo" value="logo">Add Logos</label>
+                <label for="info">
+                <input type="checkbox" name="info" id="info" value="info">More Information</label>
+                <label for="interactivity">
+                <input type="checkbox" name="interactivity" id="interactivity" value="interactivity">Interactivity</label>
+                <label for="language">
+                <input type="checkbox" name="language" id="language" value="language">Change Language</label>
               </div>
               <!-- Textarea -->
               <div class="form-group">
