--- a/index.html
+++ b/index.html
@@ -16,87 +16,89 @@
             <h1 id="title">Lualfemo Survey Form</h1>
             <p id="description">Thank you for taking the time to help me improve my skills</p>
         </section>
-        <section class="form-section">
-            <!-- Form name, email and age -->
-            <form action="" id="survey-form" method="post">
-                <div class="form-group">
-                  <label for="name" id="name-label">Name</label>
-                  <input type="text" id="name" name="name" class="input-css" required placeholder="Enter your name">
+        <div class="form-container">
+          <section class="form-section">
+              <!-- Form name, email and age -->
+              <form action="" id="survey-form" method="post">
+                  <div class="form-group">
+                    <label for="name" id="name-label">Name</label>
+                    <input type="text" id="name" name="name" class="input-css" required placeholder="Enter your name">
+                  </div>
+                  <div class="form-group">
+                    <label for="email" id="email-label">Email</label>
+                    <input type="email" name="email" id="email" class="input-css" required placeholder="Enter your Email">
+                  </div>
+                  <div class="form-group">
+                    <label for="number" id="number-label">Age (Optional)</label>
+                    <input type="number" name="number" id="number" class="input-css" min="18" max="80" required placeholder="Age">
+                  </div>
+                  <!-- dropdown list -->
+                  <div class="form-group">
+                    <label for="dropdown" id="label-role">Which option best describes your current role?</label>
+                    <select name="dropdown" id="dropdown" class="input-css">
+                      <option disabled selected value>Select current role</option>
+                      <option value="student">Student</option>
+                      <option value="fullT">Full Time Job</option>
+                      <option value="partT">Part Time Job</option>
+                      <option value="notSay">Prefer not to say</option>
+                      <option value="other">Other</option>
+                    </select>
+                  </div>
+                  <!-- recommend radio buttons -->
+                  <div class="form-group form-css">
+                    <p class="radio-paragraph">Would you recommend my work to a friend?</p>
+                    <label for="definitely">
+                    <input type="radio" name="recommend" id="definitely" value="definitely"class="input-radio"> Definitely
+                    </label>
+                    <label for="maybe">
+                    <input type="radio" name="recommend" id="maybe" value="maybe" class="input-radio">
+                    Maybe</label>
+                    <label for="notsure">
+                    <input type="radio" name="recommend" id="notsure" value="notsure" class="input-radio">
+                    Not sure</label>
                 </div>
+                  <!-- feature options -->
                 <div class="form-group">
-                  <label for="email" id="email-label">Email</label>
-                  <input type="email" name="email" id="email" class="input-css" required placeholder="Enter your Email">
-                </div>
-                <div class="form-group">
-                  <label for="number" id="number-label">Age (Optional)</label>
-                  <input type="number" name="number" id="number" class="input-css" min="18" max="80" required placeholder="Age">
-                </div>
-                <!-- dropdown list -->
-                <div class="form-group">
-                  <label for="dropdown" id="label-role">Which option best describes your current role?</label>
-                  <select name="dropdown" id="dropdown" class="input-css">
-                    <option disabled selected value>Select current role</option>
-                    <option value="student">Student</option>
-                    <option value="fullT">Full Time Job</option>
-                    <option value="partT">Part Time Job</option>
-                    <option value="notSay">Prefer not to say</option>
-                    <option value="other">Other</option>
+                  <!-- <label for="page-feature" id="labelpfeature">What is your favorite feature about this page?</label> -->
+                  <p id="feature-paragraph">What is your favorite feature about this page?</p>
+                  <select name="pagefeature" id="page-feature" class="input-css" class="input-css-select">
+                  <option disabled selected value>Select an option</option>
+                  <option value="design">Design</option>
+                  <option value="colors">Colors</option>
+                  <option value="elementsP">Elements Positioning</option>
+                  <option value="information">Information</option>
                   </select>
                 </div>
-                <!-- recommend radio buttons -->
+                <!-- Checkbox -->
                 <div class="form-group form-css">
-                  <p class="radio-paragraph">Would you recommend my work to a friend?</p>
-                  <label for="definitely">
-                  <input type="radio" name="recommend" id="definitely" value="definitely"class="input-radio"> Definitely
-                  </label>
-                  <label for="maybe">
-                  <input type="radio" name="recommend" id="maybe" value="maybe" class="input-radio">
-                  Maybe</label>
-                  <label for="notsure">
-                  <input type="radio" name="recommend" id="notsure" value="notsure" class="input-radio">
-                  Not sure</label>
-              </div>
-                <!-- feature options -->
-              <div class="form-group">
-                <!-- <label for="page-feature" id="labelpfeature">What is your favorite feature about this page?</label> -->
-                <p id="feature-paragraph">What is your favorite feature about this page?</p>
-                <select name="pagefeature" id="page-feature" class="input-css">
-                <option disabled selected value>Select an option</option>
-                <option value="design">Design</option>
-                <option value="colors">Colors</option>
-                <option value="elementsP">Elements Positioning</option>
-                <option value="information">Information</option>
-                </select>
-              </div>
-              <!-- Checkbox -->
-              <div class="form-group form-css">
-                <p class="checkbox-paragraph">What would you like to see improved (Check all that apply)</p>
-                <label for="video">
-                <input type="checkbox" name="video" id="video" value="video">Add Videos</label>
-                <label for="images">
-                <input type="checkbox" name="images" id="images" value="images">Add Images</label>
-                <label for="design">
-                <input type="checkbox" name="design" id="design" value="design">Change Design</label>
-                <label for="logo">
-                <input type="checkbox" name="logo" id="logo" value="logo">Add Logos</label>
-                <label for="info">
-                <input type="checkbox" name="info" id="info" value="info">More Information</label>
-                <label for="interactivity">
-                <input type="checkbox" name="interactivity" id="interactivity" value="interactivity">Interactivity</label>
-                <label for="language">
-                <input type="checkbox" name="language" id="language" value="language">Change Language</label>
-              </div>
-              <!-- Textarea -->
-              <div class="form-group">
-                <label for="textarea" class="textarea-label">Do you have any suggestions?</label>
-                <textarea name="textarea" id="textarea" class="textarea-comments" placeholder="Enter your comment here..."></textarea>
-              </div>
-              <!-- Submit-button -->
-              <div class="form-group">
-                <input type="submit" value="Submit" class="submit-button" id="submit">
-              </div>
-            </form>
-        </section>
+                  <p class="checkbox-paragraph">What would you like to see improved (Check all that apply)</p>
+                  <label for="video">
+                  <input type="checkbox" name="video" id="video" value="video">Add Videos</label>
+                  <label for="images">
+                  <input type="checkbox" name="images" id="images" value="images">Add Images</label>
+                  <label for="design">
+                  <input type="checkbox" name="design" id="design" value="design">Change Design</label>
+                  <label for="logo">
+                  <input type="checkbox" name="logo" id="logo" value="logo">Add Logos</label>
+                  <label for="info">
+                  <input type="checkbox" name="info" id="info" value="info">More Information</label>
+                  <label for="interactivity">
+                  <input type="checkbox" name="interactivity" id="interactivity" value="interactivity">Interactivity</label>
+                  <label for="language">
+                  <input type="checkbox" name="language" id="language" value="language">Change Language</label>
+                </div>
+                <!-- Textarea -->
+                <div class="form-group">
+                  <label for="textarea" class="textarea-label">Do you have any suggestions?</label>
+                  <textarea name="textarea" id="textarea" class="textarea-comments" placeholder="Enter your comment here..."></textarea>
+                </div>
+                <!-- Submit-button -->
+                <div class="form-group">
+                  <input type="submit" value="Submit" class="submit-button" id="submit">
+                </div>
+              </form>
+          </section>
+      </div>
     </main>
 </body>
 </html>
